bugfix: body overflow after using markdown editor

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -17,6 +17,10 @@
   }
 }
 
+body {
+  overflow: auto !important;
+}
+
 @layer base {
   input {
     @apply rounded-lg border border-gray-400 text-sm placeholder:text-sm
